feat: consume API with retrofit but cant show on activity :(

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,5 +97,6 @@
     <string name="followers">Followers</string>
     <string name="following">Following</string>
     <string name="username">Username</string>
+    <string name="network_error">Network Error</string>
 
 </resources>
