feat(followers): Menambahkan fitur lihat followers dan following

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,5 +98,6 @@
     <string name="following">Following</string>
     <string name="username">Username</string>
     <string name="network_error">Network Error</string>
+    <string name="tidak_ada_data">Tidak ada data</string>
 
 </resources>
