--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,7 @@
     <string name="username">Username</string>
     <string name="network_error">Network Error</string>
     <string name="tidak_ada_data">Tidak ada data</string>
+    <string name="user_not_found">User not found</string>
+    <string name="favorite">Favorite</string>
 
 </resources>
